# FruitShop

./: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
config/: asgi.py  celery.py  settings.py  urls.py
datasets/: 02-09-2025-mkp-pokrovvodokanal-richnii-plan-zakupivel-na-2025-rik.xls  03-09-2025-tsml-richnii-plan-zakupivel-na-2025-rik.xlsx  25-08-2025-upszn-richnii-plan-zakupivel-na-2025-rik.xlsx  29-08-2025-pmkp-zhitlkomservis-richnii-plan-zakupivel-na-2025-rik.xlsx
deploy/celery/: Dockerfile
deploy/django/: Dockerfile  entrypoint.sh
deploy/nginx/: nginx.conf
media/declarations/: balans_2_2025.xls
src/fruit_shop/: apps.py  consumers.py  forms.py  models.py  routing.py  tasks.py  urls.py  views.py
src/fruit_shop/management/commands/: init_project.py
src/fruit_shop/migrations/: 0001_initial.py  0002_declaration.py  0003_balance_fruit_trade.py
src/fruit_shop/templatetags/: __init__.py
templates/: main.html
templates/partials/: auth_form.html  balance.html  declarations_count.html  fruits.html  messages_list.html  toasts.html  trade_log.html
